@@ -68,59 +68,3 @@ local function trash_planners(event)
     end
 end
 Event.register(defines.events.on_player_trash_inventory_changed, trash_planners)
-
-local function main_inventory(event)
-    local player = game.get_player(event.player_index)
-    local inventory = player.get_main_inventory()
-    if not inventory.is_empty() then
-        local ms = player.mod_settings
-        local bp = ms['picker-no-inv-blueprint'].value
-        local bpb = ms['picker-no-inv-blueprint-book'].value
-        local dec = ms['picker-no-inv-deconstruction-item'].value
-        local upg = ms['picker-no-inv-upgrade-item'].value
-
-        if bp or bpb or dec or upg then
-            for i = 1, #inventory do
-                local slot = inventory[i]
-                if slot.is_item_with_label then
-                    if bp and slot.is_blueprint and not slot.is_blueprint_setup() then
-                        return slot.clear()
-                    end
-                    if bpb and slot.is_blueprint_book then
-                        local book = slot.get_inventory(defines.inventory.item_main)
-                        if book then
-                            local clear = true
-                            for j = 1, #book do
-                                if book[j].is_blueprint and book[j].is_blueprint_setup() then
-                                    clear = false
-                                    break
-                                end
-                            end
-                            if clear then
-                                return slot.clear()
-                            end
-                        end
-                    end
-                    if dec and slot.is_deconstruction_item then
-                        if #slot.entity_filters == 0 and #slot.tile_filters == 0 then
-                            return slot.clear()
-                        end
-                    end
-                    if upg and slot.is_upgrade_item then
-                        local clear = true
-                        for j = 1, slot.prototype.mapper_count do
-                            if slot.get_mapper(j, 'from').name then
-                                clear = false
-                                break
-                            end
-                        end
-                        if clear then
-                            return slot.clear()
-                        end
-                    end
-                end
-            end
-        end
-    end
-end
-Event.register(defines.events.on_player_main_inventory_changed, main_inventory)
