@@ -19,33 +19,5 @@ data:extend {
         setting_type = 'runtime-per-user',
         default_value = false,
         order = '[zapper]-y'
-    },
-    {
-        type = 'bool-setting',
-        name = 'picker-no-inv-blueprint',
-        setting_type = 'runtime-per-user',
-        default_value = true,
-        order = '[zapper]-a1'
-    },
-    {
-        type = 'bool-setting',
-        name = 'picker-no-inv-blueprint-book',
-        setting_type = 'runtime-per-user',
-        default_value = false,
-        order = '[zapper]-a2'
-    },
-    {
-        type = 'bool-setting',
-        name = 'picker-no-inv-deconstruction-item',
-        setting_type = 'runtime-per-user',
-        default_value = false,
-        order = '[zapper]-b'
-    },
-    {
-        type = 'bool-setting',
-        name = 'picker-no-inv-upgrade-item',
-        setting_type = 'runtime-per-user',
-        default_value = false,
-        order = '[zapper]-c'
-    },
+    }
 }
